@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.588 2004-07-21 23:58:09 castaglia Exp $
+$Id: NEWS,v 1.589 2004-07-22 21:49:20 castaglia Exp $
 
 CVS
 --------------------------------
@@ -6,6 +6,7 @@ CVS
   the module name in an AuthOrder directive to indicate that an auth
   module is authoritative.
 - Bug 2441 - AIX5 portability bug with mod_auth_unix, mod_auth_file.
+- Bug 2442 - Segfault in FreeBSD PAM library with long login names.
 
 1.2.10rc3 - Released 13-Jul-2004
 --------------------------------
